@@ -20,6 +20,7 @@ DECL|function|PixelBufferWrapper
 DECL|function|PixmapWrapper
 DECL|function|SceneRenderingThread
 DECL|function|SwapThread
+DECL|function|TextureDisplay
 DECL|function|ThreadPainter
 DECL|function|ThreadSafeGLWidget
 DECL|function|areRunning
@@ -28,7 +29,10 @@ DECL|function|failed
 DECL|function|failed
 DECL|function|lock
 DECL|function|main
-DECL|function|notify
+DECL|function|moveToThread
+DECL|function|moveToThread
+DECL|function|moveToThread
+DECL|function|moveToThread
 DECL|function|paintEvent
 DECL|function|paintEvent
 DECL|function|paintEvent
@@ -52,12 +56,15 @@ DECL|function|run
 DECL|function|run
 DECL|function|run
 DECL|function|setThread
+DECL|function|signalReadyToSwap
+DECL|function|signalSwapDone
 DECL|function|start
 DECL|function|swapInThread
 DECL|function|textureUploadInThread
 DECL|function|tst_QGLThreads
 DECL|function|unlock
-DECL|function|wait
+DECL|function|waitForReadyToSwap
+DECL|function|waitForSwapDone
 DECL|function|~CreateAndUploadThread
 DECL|function|~Device
 DECL|function|~FrameBufferObjectWrapper
@@ -70,14 +77,18 @@ DECL|member|devices
 DECL|member|fail
 DECL|member|failure
 DECL|member|fbo
+DECL|member|m_context
 DECL|member|m_gl
 DECL|member|m_images
 DECL|member|m_mutex
 DECL|member|m_positions
+DECL|member|m_readyToSwap
+DECL|member|m_semaphore
+DECL|member|m_semaphore
 DECL|member|m_size
+DECL|member|m_swapDone
+DECL|member|m_swapTriggered
 DECL|member|m_thread
-DECL|member|m_wait_condition
-DECL|member|m_widget
 DECL|member|m_widget
 DECL|member|mutex
 DECL|member|newSize
